<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:baselineAligned="false" >

    <Button
        android:id="@+id/button2"
        android:layout_width="362dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="17dp"
        android:layout_marginTop="317dp"
        android:onClick="OnClickReset"
        android:text="@string/reset" />

    <EditText
        android:id="@+id/code_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="15dp"
        android:layout_marginTop="104dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/Code_view"
        android:inputType="number" />

    <Button
        android:id="@+id/send_code"
        android:layout_width="135dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/code_text"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="-44dp"
        android:layout_marginEnd="30dp"
        android:onClick="onClickWrite"
        android:text="@string/Send" />

    <TextView
        android:id="@+id/result_view"
        android:layout_width="wrap_content"
        android:layout_height="147dp"
        android:layout_alignStart="@+id/code_text"
        android:layout_alignEnd="@+id/send_code"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="2dp"
        android:layout_marginEnd="2dp"
        android:layout_marginBottom="46dp"
        android:background="@drawable/outside"
        android:scrollbars="vertical" />

    <TextView
        android:id="@+id/lock_view"
        android:layout_width="166dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="21dp"
        android:layout_marginTop="18dp"
        android:text="@string/lockstatus"
        tools:text="@string/lockstatus" />

    <TextView
        android:id="@+id/phone_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="21dp"
        android:layout_marginTop="52dp"
        android:clickable="false"
        android:text="@string/phoneid" />

    <Button
        android:id="@+id/update_code"
        android:layout_width="362dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="19dp"
        android:layout_marginTop="182dp"
        android:onClick="onClickUpdateCode"
        android:text="@string/updatecode" />

    <Button
        android:id="@+id/button3"
        android:layout_width="362dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="19dp"
        android:layout_marginTop="250dp"
        android:onClick="OnClickSendLock"
        android:text="@string/locktest" />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="33dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_centerVertical="true"
        android:layout_marginStart="312dp"
        android:layout_marginBottom="197dp"
        android:onClick="OnClickResultView"
        android:text="@string/clearresult"
        android:textSize="14sp" />

</RelativeLayout>